[FIX] Fixed templates.

--- a/templates/Shoppingmail-Block-Tracker-Success.all.all.html
+++ b/templates/Shoppingmail-Block-Tracker-Success.all.all.html
@@ -1,4 +1,5 @@
 <script type="text/javascript">
-//<![CDATA[
-document.write('<img src="${trackerUrl}" />'); //]]>
+	/* <![CDATA[ */
+	document.write('<img src="${trackerUrl}" />');
+	/* ]]> */
 </script>
